# adventofcode

./: .gitignore  CMakeLists.txt  main.cpp
adventofcode2025/: day01.h  day02.h  day03.h  day04.h  day05.h  day06.h  utils2025.h
